src/main/webapp/desktopView/TagAPrice.css
html{
    background-color: #2c2d25;
}

body {
    margin: 0px;
    padding: 0px;
    background-color: #bfd255;
    font-family: "Arial", "Helvetica", "Verdana", "sans-serif";
    font-size: small;
    background: -webkit-linear-gradient(#bfd255 10px, #72aa00 150px, #ebe9e1 150px); /* Safari 5.1+, Chrome 10+ */  
    background: -webkit-gradient(linear, left top, left bottom, color-stop(10px, #bfd255), color-stop(150px, #72aa00), color-stop(150px, #ebe9e1)); /* Safari 4+, Chrome 2+ */   
    background: -moz-linear-gradient(#bfd255 10px, #72aa00 150px, #ebe9e1 150px); /* FF 3.6+ */  
    background: -ms-linear-gradient(#bfd255 10px, #72aa00 150px, #ebe9e1 150px); /* IE10 */  
    background: linear-gradient(#bfd255 10px, #72aa00 150px, #ebe9e1 150px); /* the standard */
}

body,p,h1,h2,h3,h4,table,td,th,ul,ol,textarea,input
{
}

a {
    color: #72aa00;
    text-decoration: none;
}

a:HOVER{
    text-decoration: underline;
}

.header {
    width: 100%;
    height: 60px;
}


.header input{
    color: #2c2d25;
    font-weight: bold;
    width: 600px;
    background-color: rgba(255,255,255,0.0);
    margin: 0px;
    padding: 5px;
    border-radius: 2px;
    border-top-right-radius: 0px;
    border-top-left-radius: 0px;
    border: solid 2px #ebe9e1;
    border-top-width: 0px;
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);

    
    background-image:url('06-magnify.png');
    background-repeat:no-repeat;
    background-position:left center;
    padding-left: 28px;
}

.header input:HOVER{
    color: #ebe9e1;
    background-color: #2c2d25;
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
}

.header input:FOCUS {
    color: #2c2d25;
    background-color: white;
    /*box-shadow:  0px 0px 3px 3px rgba(255,255,255,0.5);*/
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
}


.center {
    text-align:left;
    width: 870px;    
}

.stdframe{
    padding-right: 2px;
    padding-left: 2px
}

.stdframe .head{
    background-color: #2c2d25;
    margin-bottom: 15px;
    color: #ffffff;
    font-size: 22px;
    font-weight: bold;
    padding: 5px;
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
    border-radius: 2px;
    font-family: Times;
}

.stdframe .body{
    background-color: white;
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
    padding: 5px;
    padding-bottom: 30px;
    border-radius: 2px;
}

.stdframe.editArea {
    position:relative;
    padding:10px;
    margin:1em 0 3em;
    color:#000;
    -webkit-border-radius:10px;
    -moz-border-radius:10px;
    border-radius:5px;

    background:rgba(0,0,0,0.8);
    color: white;
}



/* creates triangle */
.stdframe.editArea:after {
    content:"";
    position:absolute;
    border-style:solid;
    /* reduce the damage in FF3.0 */

    top:8px; /* controls vertical position */
    right:-20px; /* value = - border-left-width - border-right-width */
    bottom:auto;
    left:auto;
    border-width:10px 0 10px 20px;
    border-color:transparent rgba(0,0,0,0.8);
}


.bottom {
    padding-top: 10px;
    color: #c7c5be;
    background-color: #2c2d25;
    width: 100%;
    height: 240px;
    margin-top: 40px;
    box-shadow: inset 0px 10px 10px black;
}

.bottom-text{
    text-align: left;
    width: 800px;
}

.bottom-text h2{
    color: #bfd255;
    margin-bottom: 2px;
}

.bottom-text a {
    color: #c7c5be;
    text-decoration: none;
}

.bottom-text a:HOVER{
    text-decoration: underline;
}

.login{
    width: 50px;
    color: #2c2d25;
    font-weight: bold;
    margin: 0px;
    padding: 7px;
    background-color: rgba(255,255,255,0.2);
    cursor: pointer;
}

.login:HOVER {
    color: #ebe9e1;
    cursor: pointer;
    background-color: #2c2d25;
}

.loginView{
    color: #ebe9e1;
    background-color: #2c2d25;
    padding: 10px;
    border-radius: 5px;
    border-top-right-radius: 0px;
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
}

.loginView input {
    width: 200px;
    border-width: 2px;
    border-style: solid;
    border-color: #bfd255;
    border-radius: 3px;
    background-color: #ebe9e1;
    padding: 3px;
    margin-bottom: 6px;
}

.loginView input:HOVER, input:FOCUS {
    box-shadow:  0px 0px 2px 2px rgba(255,255,255,0.5);
}

.loginView button {
    cursor: pointer;
    font-weight: bold;
    color: #2c2d25;
    border-radius: 3px;
    border-width: 2px;
    border-style: solid;
    border-color: #bfd255;
    padding: 3px;
}

.loginView button:HOVER, button:FOCUS  {
    box-shadow:  0px 0px 2px 2px rgba(255,255,255,0.5);
}

.loginView a {
    color: #bfd255;
    text-decoration: none;
}

.loginView a:HOVER{
    text-decoration: underline;
}

.loginView hr {
    margin-top: 15px;
    margin-bottom: 3px;
    color: rgba(255,255,255,0.4);
    background-color: rgba(255,255,255,0.4);
    height: 1px;
    border: 0;
}

.loginView-pic {
    margin-bottom: 4px;
}

.infoBox{
    font-size: 14px;
    background-color: #2c2d25;
    margin: 0px;
    padding: 0px;
    font-weight: bold;
    box-shadow: 0px 10px 8px rgba(0,0,0,0.5);
}

.infoBox .success{
    border-bottom:solid 3px #72aa00;
    color: #72aa00;
    padding: 3px;
    padding-left: 15px;
    
}

.infoBox .info{
    color: yellow;
    border-bottom:solid 3px yellow;
    padding: 3px;
    padding-left: 15px;
}

.infoBox .error{
    border-bottom:solid 3px red;
    padding: 3px;
    color: red;
    padding-left: 15px;
    
}

.stdgrid{
    padding: 0px;
    margin: 0px;
    border:none;
    border-spacing: 0px;
}

.stdgrid input{
    width: 200px;
    border-width: 2px;
    border-style: solid;
    border-color: #bfd255;
    border-radius: 3px;
    background-color: #ebe9e1;
    padding: 3px;
    margin-bottom: 5px;
}


table.stdgrid{
    padding: 0px;
    margin: 0px;
    
}

table.stdgrid td{
    padding-right: 10px;
    margin:0px;
}

table.stdgrid th{

}

.stdgrid .namecell{
    text-align: right;
    font-weight: bold;
}
/* ... */

